--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>你好，GitHub</title>
+    <title>KereDs的個人網頁</title>
   </head>
   <body>
     <h1>覺得厲害</h1>
