--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>KereDs的個人網頁</title>
   </head>
   <body>
-    <h1>覺得厲害</h1>
+    <img src="images/firefox-icon.png" alt="My test image">
   </body>
 </html>
