--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>KereDs的個人網頁</title>
   </head>
   <body>
-    <h1>方德霖</h1> <h1>Instagram</h1>
+    <h1>方德霖       Instagram</h1> 
     <hr>
   </body>
 </html>
