--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     }
 
     .aboutme {
-      /* background-image: url('/assets/img/succcess.jpg'); */
+      /* background-image: url('assets/img/succcess.jpg'); */
       border-radius: 2ch;
       background: #def1ef;
     }
@@ -115,7 +115,7 @@
           <div class="dropdown text-end">
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
               aria-expanded="false">
-              <img src="/assets/img/d.png" alt="mdo" width="32" height="32">
+              <img src="assets/img/d.png" alt="mdo" width="32" height="32">
             </a>
             <ul class="dropdown-menu text-small">
               <li><a class="dropdown-item" href="#">New project...</a></li>
