--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="dropdown text-end">
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
               aria-expanded="false">
-              <img src="assets/img/d.png" alt="mdo" width="32" height="32">
+              <img src="assets/dist/img/d.png" alt="kered" width="32" height="32">
             </a>
             <ul class="dropdown-menu text-small">
               <li><a class="dropdown-item" href="#">New project...</a></li>
@@ -153,7 +153,7 @@
       <div class="aboutme">
         <div class="row p-4 p-md-5 mb-4 rounded ">
           <div class="col-md-4 pl-0">
-            <img src="/assets/img/IMG_1355_2.jpg" height="250" width="250" data-holder-rendered="true"
+            <img src="assets/dist/img/IMG_1355_2.jpg" height="250" width="250" data-holder-rendered="true"
               class="rounded-circle">
           </div>
           <div class="col-md-6 px-0">
