--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/blog/">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/headers/">
-
+  <link rel="icon" href="/favicon.ico" type="image/icon type">
 
 
 
@@ -75,9 +75,9 @@
       background: rgb(247, 244, 244);
     }
 
-    .twcount {
-      display: inline-block;
-    }
+    .text-h-center {
+            text-align: center;
+        }
   </style>
 
 
@@ -238,6 +238,9 @@
         </div>
       </div>
       
+      <div class="section text-h-center">
+        <img src="/assets/img/succcess.jpg" alt="mdo" width="1200px">
+    </div>
       <!-- <div class="row g-5">
         <div class="col-md-8">
           <h3 class="pb-4 mb-4 border-bottom" style="font-weight: bold;">
