--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/blog/">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/headers/">
-  <link rel="icon" href="/favicon.ico" type="image/icon type">
+  <link rel="icon" href="/assets/img/letter-d.png" type="image/icon type">
 
 
 
