--- a/article1.html
+++ b/article1.html
@@ -18,6 +18,10 @@
     <link href="/assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
+        .body {
+            font-family: "微軟正黑體", sans-serif;
+        }
+
         .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -73,13 +77,17 @@
             text-align: center;
         }
 
-        .down {
-            background-color: rgb(207, 229, 238);
-            height: 8ch;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        .selfshort {
+            font-size: 20px;
+        }
+
+        .big {
+            font-size: 40px;
+            font-weight: 600;
+        }
+
+        .cont{
+            font-size: 25px;
         }
     </style>
 
@@ -93,7 +101,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand text-black px-3" href="index.html" style="font-weight: bold;">Derek Fang</a>
+                <a class="navbar-brand text-black px-5" href="index.html" style="font-weight: bold;">Derek Fang</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -108,7 +116,7 @@
                             <p class="pt-2">|</p>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link text-black px-3" href="#" style="font-weight: bold;">Resume</a>
+                            <a class="nav-link text-black px-3" href="resume.html" style="font-weight: bold;">Resume</a>
                         </li>
                         <li class="nav-item">
                             <p class="pt-2">|</p>
@@ -137,41 +145,47 @@
 
     <main>
         <div class="container">
-            <div class="row p-4 mt-5">
-                <h1 style="font-weight:bold;text-align: center;">履歷 Resume</h1>
-                <hr>
-                <img src="/assets/img/resume.png">
+            <div class="row p-5 mt-5">
+              <h2 style="font-weight:bold;text-align:center ">第一篇Blog</h2>
+              <p style="font-weight:bold;text-align:center">July 29,2022</p>
+              <div class="blog">
+                <p>
+                  大家好，這是我的第一篇文章，最近其實算是水深火熱，接了補習班的助教再加上暑期實習，連假日的時間都要拿來做正事，雖然累但也算滿充實的吧。
+                </p>
+                <p>
+                  本來以為順利考上研究所後可以好好享受暑假，結果發現大家都太強了 不多花點時間充實自己只會離他們越來越遠。
+                <p>
+                  先來聊聊為甚麼會做這個網頁好了，最近下班後最常做的事就是看Youtube，某天我的YT首頁跳出了一位叫做<a href="https://www.youtube.com/c/devaslife/videos"
+                    style="text-decoration:none;">Takuya</a>的Indie app developer的影片
+                </p>
+                <p>
+                  他的背景常常都是山林之類的大自然，整部影片沒有講話，就只有他電腦的程式畫面，外加很清脆的打字聲和潺潺流水
+                </p>
+                <p>
+                  一開始只是無聊看看，結果越看越上癮，所以決定來試試看寫一個自己的網頁
+                </p>
+                <p>
+                  但我對程式完全不在行，更沒網頁經驗，僅能靠著之前修資料庫的一咪咪印象(其實大多都是Ctrl C + Ctrl V別人的模板，不過在我寫得出更好的東西之前就先這樣吧
+                </p>
+                <p>
+                  總之希望這篇文章不會是我的最後一篇網誌，畢竟我很懶，隨時都有可能不想做了
+                </p>
+                <p style="font-weight:bold;">
+                  阿如果大家有甚麼好的建議拜託跟我說，不然我看很快就要停載了，技術支援也超級需要！！！
+                </p>
+                <p>
+                  不知道要打甚麼，所以附上我婆IU的照片
+                </p>
+                <img src="/assets/postimg/iu.jpg">
+              </div>
             </div>
-        </div>
+          </div>
 
-
-
-        <div class="navbar">
-            <div class="down">
-                <ul class="nav col-12 col-md-auto mb-0 justify-content-center mb-md-0">
-                    <li class="nav-item ">
-                        <a href="https://www.facebook.com/KereDs1213/"><img src="/assets/img/facebook.png" alt="f"
-                                width="32" height="32"></a>
-                    </li>
-                    <li><a href="#" class="nav-link px-2 link-dark">Facebook</a></li>
-                    <li class="nav-item ">
-                        <a href="https://www.instagram.com/fangderek/"><img src="/assets/img/instagram.png" alt="ig"
-                                width="32" height="32"></a>
-                    </li>
-                    <li><a href="#" class="nav-link px-2 link-dark">Instagram</a></li>
-                    <li class="nav-item pl-2">
-                        <a href="#"><img src="/assets/img/email.png" alt="ig" width="32" height="32"></a>
-                    </li>
-                    <li><a href="#" class="nav-link px-2 link-dark">Email</a></li>
-                </ul>
-
-            </div>
-
-        </div>
 
         <footer class="p-3 mt-4 text-muted border-top">
             © 2022 KereDs
         </footer>
+        <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
     </main>
 
     <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
