--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <rect width="100%" height="100%" fill="#777" />
           <div class="container">
             <div class="carousel-caption text-start">
-              <img src="/assets/img/me.JPG" height="250" width="250" data-holder-rendered="true"
+              <img src="/assets/img/me.jpg" height="250" width="250" data-holder-rendered="true"
                 class="rounded-circle">
               <h1>Welcome to my blog.</h1>
               <p>Try to build up a personal website as a biginner</p>
