--- a/article1.html
+++ b/article1.html
@@ -41,13 +41,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <!-- <li class="nav-item">
-              <a class="nav-link active text-black " aria-current="page" href="aboutme.html"
-                style="font-weight: bold;"><span>About me</span></a>
-            </li>
-            <li class="nav-item">
-              <p class="pt-2">|</p>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link text-black px-3" href="resume.html" style="font-weight: bold;">Resume</a>
             </li>
@@ -71,10 +64,6 @@
             </li>
             <img src="/assets/img/d.png" alt="d" width="32" height="32">
           </ul>
-          <!-- <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form> -->
         </div>
       </div>
     </nav>
@@ -85,7 +74,7 @@
     <div class="container">
       <div class="row p-5 mt-5">
         <h2 style="font-weight:bold;text-align:center ">第一篇Blog</h2>
-        <p style="font-weight:bold;text-align:center">July 29,2022</p>
+        <p class="pb-4" style="font-weight:bold;text-align:center">July 29, 2022</p>
         <div class="blog">
           <p>
             大家好，這是我的第一篇文章，最近其實算是水深火熱，接了補習班的助教再加上暑期實習，連假日的時間都要拿來做正事，雖然累但也算滿充實的吧。
@@ -93,7 +82,7 @@
           <p>
             本來以為順利考上研究所後可以好好享受暑假，結果發現大家都太強了 不多花點時間充實自己只會離他們越來越遠。
           <p>
-            先來聊聊為甚麼會做這個網頁好了，最近下班後最常做的事就是看Youtube，某天我的YT首頁跳出了一位叫做<a href="https://www.youtube.com/c/devaslife/videos" style="text-decoration:none;">Takuya</a>的Indie app developer的影片
+            先來聊聊為甚麼會做這個網頁好了，最近下班後最常做的事就是看Youtube，某天我的YT首頁跳出了一位叫做<a href="https://www.youtube.com/c/devaslife/videos" style="color: black;">Takuya</a>的Indie app developer的影片
           </p>
           <p>
             他的背景常常都是山林之類的大自然，整部影片沒有講話，就只有他電腦的程式畫面，外加很清脆的打字聲和潺潺流水
