--- a/article2.html
+++ b/article2.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row p-5 mt-5">
                 <h2 style="font-weight:bold;text-align:center ">第二篇Blog</h2>
-                <p style="font-weight:bold;text-align:center">August 3,2022</p>
+                <p class="pb-4" style="font-weight:bold;text-align:center">August 3, 2022</p>
                 <div class="blog">
                     <p>
                         最近幾天真的滿累的，本來想說實習才過了一半，應該還有時間可以慢慢處理我的data和train model
