--- a/musichome.html
+++ b/musichome.html
@@ -75,7 +75,7 @@
           <hr>
           <div class="col-md-4 mt-4">
             <div class="musich" style="height: 400px;">
-              <button class="btnnn" onclick="window.location.href=''" type="button" style="font-weight: bold; font-size: large;">August 3, 2022</button>
+              <button class="btnnn" onclick="window.location.href='music1.html'" type="button" style="font-weight: bold; font-size: large;">August 3, 2022</button>
             </div>
           </div> 
         </div>
