--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <p class="pt-2">|</p>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black px-3" href="projecthome.html" style="font-weight: bold;">Project</a>
+              <a class="nav-link text-black px-3" href="#" style="font-weight: bold;">Project</a>
             </li>
             <li class="nav-item">
               <p class="pt-2">|</p>
@@ -83,7 +83,7 @@
   <main>
     <div class="col-md-12 ">
       <div class="head">
-        <h1 class="welcome">Welcome to my blog</h1>
+        <h1 class="welcome" style="font-family:fantasy;">Welcome to my blog</h1>
       </div>
     </div>
     <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -260,25 +260,29 @@
             On The Web
           </h4>
           <p class="pt-1"><a href="https://www.facebook.com/KereDs1213/"><img src="/assets/img/facebook.png" alt="f"
-                width="32" height="32"></a><a class="text-black" href="https://www.facebook.com/KereDs1213/" style="text-decoration:none;">
-                  <span class="px-3" style="font-weight: 700">DerekFang</span></a></p>
+                width="32" height="32"></a><a class="text-black" href="https://www.facebook.com/KereDs1213/"
+              style="text-decoration:none;">
+              <span class="px-3" style="font-weight: 700">DerekFang</span></a></p>
 
           <p><a href="https://www.instagram.com/fangderek/"><img src="/assets/img/instagram.png" alt="ig" width="32"
-                height="32"></a><a class="text-black" href="https://www.instagram.com/fangderek/" style="text-decoration:none;">
-                  <span class="px-3" style="font-weight: 700">fangderek</span></a></p>
-                
+                height="32"></a><a class="text-black" href="https://www.instagram.com/fangderek/"
+              style="text-decoration:none;">
+              <span class="px-3" style="font-weight: 700">fangderek</span></a></p>
+
           <p><a href="mailto:6500dr@gmail.com"><img src="/assets/img/email.png" alt="ig" width="32" height="32"></a>
             <a class="text-black" href="mailto:6500dr@gmail.com" style="text-decoration:none;"><span class="px-3"
-              style="font-weight: 700">6500dr@gmail.com</span></a></p>
+                style="font-weight: 700">6500dr@gmail.com</span></a>
+          </p>
         </div>
         <div class="col-md-3">
           <button id="scrolltotop">
             <i class="material-icons">arrow_upward</i>
           </button>
         </div>
+
       </div>
+
     </div>
-    
   </main>
   <footer class="p-3 mt-4 text-muted border-top" style="text-align:center;">
     © 2022 KereDs
