--- a/projecthome.html
+++ b/projecthome.html
@@ -80,13 +80,27 @@
     </nav>
   </header>
   <main>
-    <h1 style="text-align:center ;">還沒有東西，Maybe開學後會有東西可以寫</h1>
-    <h1 style="text-align:center ;">還沒有東西，Maybe開學後會有東西可以寫</h1>
-    <h1 style="text-align:center ;">還沒有東西，Maybe開學後會有東西可以寫</h1>
-    <h1 style="text-align:center ;">還沒有東西，Maybe開學後會有東西可以寫</h1>
-    <h1 style="text-align:center ;">還沒有東西，Maybe開學後會有東西可以寫</h1>
-    <h1 style="text-align:center ;">還沒有東西，Maybe開學後會有東西可以寫</h1>
-    <h1 style="text-align:center ;">還沒有東西，Maybe開學後會有東西可以寫</h1>
+    <div class="container">
+      <div class="row p-5 mt-4">
+        <h1 style="text-align:center">Project</h1>
+        <hr>
+        <div class="col-md-4 mt-4">
+          <div class="projecth" style="height: 350px;">
+            <button class="btnnn" onclick="window.location.href=''" type="button" style="font-weight: bold; font-size: large;">空的</button>
+          </div>
+        </div>
+        <div class="col-md-4 mt-4">
+          <div class="projecth" style="height: 350px;">
+            <button class="btnnn" onclick="window.location.href=''" type="button" style="font-weight: bold; font-size: large;">空的</button>
+          </div>
+        </div>
+        <div class="col-md-4 mt-4">
+          <div class="projecth" style="height: 350px;">
+            <button class="btnnn" onclick="window.location.href=''" type="button" style="font-weight: bold; font-size: large;">空的</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <div class="col-md-3">
     <button id="scrolltotop">
