--- a/articlehome.html
+++ b/articlehome.html
@@ -86,12 +86,17 @@
         <h1 style="text-align:center">Article</h1>
         <hr>
         <div class="col-md-4 mt-4">
-          <div class="articleh" style="height: 400px;">
+          <div class="articleh" style="height: 350px;">
+            <button class="btnnn" onclick="window.location.href='article3.html'" type="button" style="font-weight: bold; font-size: large;">August 6, 2022</button>
+          </div>
+        </div>
+        <div class="col-md-4 mt-4">
+          <div class="articleh" style="height: 350px;">
             <button class="btnnn" onclick="window.location.href='article2.html'" type="button" style="font-weight: bold; font-size: large;">August 3, 2022</button>
           </div>
         </div>
         <div class="col-md-4 mt-4">
-          <div class="articleh" style="height: 400px;">
+          <div class="articleh" style="height: 350px;">
             <button class="btnnn" onclick="window.location.href='article1.html'" type="button" style="font-weight: bold; font-size: large;">July 31, 2022</button>
           </div>
         </div>
