--- a/articlehome.html
+++ b/articlehome.html
@@ -41,13 +41,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <!-- <li class="nav-item">
-              <a class="nav-link active text-black " aria-current="page" href="aboutme.html"
-                style="font-weight: bold;"><span>About me</span></a>
-            </li>
-            <li class="nav-item">
-              <p class="pt-2">|</p>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link text-black px-3" href="resume.html" style="font-weight: bold;">Resume</a>
             </li>
@@ -61,20 +54,10 @@
               <p class="pt-2">|</p>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black px-3" href="projecthome.html" style="font-weight: bold;">Project</a>
-            </li>
-            <li class="nav-item">
-              <p class="pt-2">|</p>
-            </li>
-            <li class="nav-item">
               <a class="nav-link text-black px-3" href="musichome.html" style="font-weight: bold;">Music</a>
             </li>
             <img src="/assets/img/d.png" alt="d" width="32" height="32">
           </ul>
-          <!-- <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form> -->
         </div>
       </div>
     </nav>
@@ -85,6 +68,11 @@
       <div class="row p-5 mt-4">
         <h1 style="text-align:center">Article</h1>
         <hr>
+        <div class="col-md-4 mt-4">
+          <div class="articleh" style="height: 350px;">
+            <button class="btnnn" onclick="window.location.href='article4.html'" type="button" style="font-weight: bold; font-size: large;">August 6, 2022</button>
+          </div>
+        </div>
         <div class="col-md-4 mt-4">
           <div class="articleh" style="height: 350px;">
             <button class="btnnn" onclick="window.location.href='article3.html'" type="button" style="font-weight: bold; font-size: large;">August 6, 2022</button>
