--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <li class="nav-item">
               <p class="pt-2">|</p>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link text-black px-3" href="articlehome.html" style="font-weight: bold;">Articles</a>
             </li>
             <li class="nav-item">
               <p class="pt-2">|</p>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link text-black px-3" href="#" style="font-weight: bold;">Project</a>
             </li>
@@ -61,10 +61,8 @@
   </header>
 
   <main>
-    <div class="col-md-12 ">
-      <div class="head">
+    <div class="col-md-12 head" style="width: 100%;height: 940px;">
         <h1 class="welcome" style="font-family:fantasy;">Welcome to my blog</h1>
-      </div>
     </div>
     <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -125,7 +123,7 @@
     <!-- Marketing messaging and featurettes
   ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="row p-4 ">
         <div class="col-md-4 ">
           <div class="article" style="height: 400px;">
@@ -154,7 +152,7 @@
       <div class="pic px-4">
         <img class="" src="/assets/img/beautiful3.jpg" width="100%">
       </div>
-    </div>
+    </div> -->
 
 
     <div class="container">
